src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {

}

html {

}

body {
  background: linear-gradient(90deg, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
  background-repeat: no-repeat;
  height: 100vh;
}

.todolist-box {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.container {
  max-width: 1200px;
  margin: auto;
}

.todo-form {
  text-align: center;
  background-color: #222222;
  border-radius: 20px;
  padding: 48px 32px;
  color: #fff;
  min-width: 600px;
  min-height: 600px;
  max-height: 600px;
  overflow: hidden;
}

.total-list {
  overflow-y: auto;
  min-height: 600px;
  max-height: 600px;
  padding: 0 8px;
}

.title {
  margin-bottom: 32px;
}

.form {
  position: relative;
  margin-bottom: 32px;
}

.form + .form {
  margin-top: 32px;
}

.form form {
  padding: 4px;
  border-radius: 8px;
  border: 4px solid #316ee7;
}

.form form input[type="text"] {
  width: 100%;
  background: transparent;
  color: #fff;
  outline: none;
  border: none;
  border-radius: 8px;
  padding: 16px 12px;
  font-size: 20px;
}

.form button {
  position: absolute;
  width: max-content;
  right: 0px;
  top: 50%;
  transform: translateY(-50%);
  height: calc(100%);
  padding: 12px;
  background: linear-gradient(90deg, rgba(49,110,231,1) 0%, rgba(86,135,233,1) 100%);
  border: none;
  color: #fff;
  font-weight: 600;
  text-transform: uppercase;
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
  min-width: 98.56px;
}

.form button:hover {
  cursor: pointer;
}

.todo-box-child {
  display: flex;
  justify-content: space-between;
  padding: 12px 4px 12px 16px;
  background-color: red;
  border-radius: 8px;
  align-items: center;
}

.todo-box-child + .todo-box-child {
  margin-top: 8px;
}

.todo-box-child:hover {
  cursor: pointer;
  opacity: 0.8;
}

.icons {
  display: flex;
  align-items: center;
  column-gap: 16px;
}

.icons span {
  font-size: 32px;
}

.icons span:hover {
  cursor: pointer;
}

.todo-box-child:nth-child(n) {
  background: linear-gradient(90deg, rgba(49,110,231,1) 0%, rgba(86,135,233,1) 100%);
}

.todo-box-child:nth-child(2n) {
  background: linear-gradient(90deg, rgba(233,128,67,1) 0%, rgba(255,94,0,1) 100%);
}

.todo-box-child:nth-child(3n) {
  background: linear-gradient(90deg, rgba(200,67,233,1) 0%, rgba(99,23,205,1) 100%);
}

.todo-box-child:nth-child(4n) {
  background: linear-gradient(90deg, rgba(214,84,192,1) 0%, rgba(205,23,23,1) 100%);
}

.todo-box-child h2 {
  max-width: 313px;
  text-align: left;
}

.todo-box-child.completed {
  opacity: 0.5;
}

.todo-box-child.completed h2 {
  text-decoration: line-through;
}

